# pareto-bench

./: .env.example  .gitignore  CONTEXT.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
configs/: experiments.yaml  models.yaml
experiments/: 01_pilot.py  02_full_run.py  README.md
notebooks/: 01_pilot_analysis.ipynb  02_pareto_plots.ipynb  03_paper_figures.ipynb
paper/: main.tex  references.bib
src/: __init__.py  runner.py
src/benchmarks/: __init__.py  arc_challenge.py  base.py  gaia_l1.py  gsm8k.py  humaneval.py
src/cost_tracking/: __init__.py  pricing.py  tracker.py
src/llm_clients/: __init__.py  anthropic_client.py  base.py  factory.py  google_client.py  openai_client.py
src/strategies/: __init__.py  base.py  hetero_debate.py  reasoning_bank.py  role_debate.py  single_agent_sc.py  vanilla_debate.py
src/utils/: __init__.py  logging.py  seeds.py
tests/: __init__.py  test_cost_tracking.py  test_strategies.py
