[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pareto-bench"
version = "0.1.0"
description = "Cost-matched benchmark comparing multi-agent debate strategies versus single-agent baselines for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["benchmark", "multi-agent", "LLM", "debate", "evaluation", "iso-cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30",
    "anthropic>=0.28",
    "google-generativeai>=0.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.1",
    "datasets>=2.19",
    "tqdm>=4.66",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
pareto-bench = "src.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
